fixed contact fields wrapping

--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ section > form {
   padding: 5px 10px;
   width: 200px;
   box-sizing: border-box;
-  flex-basis: 80%;
+  flex-basis: 90%;
 }
 
 input[type="submit"] {
